--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,125 @@
-html {
-  background: #0025ff;
-  color: #fff;
+body {
+  background: #b1c0b5;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  flex-direction: column;
+}
+
+@media (min-width: 667px) and(max-width:1024px) {
+  body {
+    background: #68796c;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+  img {
+    width: 40%;
+  }
+}
+
+header {
+  background-color: #ffffff;
+  border-bottom: solid;
+  border-color: #e64242;
+  padding: 2px;
+  text-align: left;
+}
+
+
+h1 {
+  background-color: #ffffff;
+  padding: 5px;
+  font-size: 40px;
+  font-family: 'Times New Roman', Times, serif;
+  color: rgb(248, 27, 27);
+  text-align: center;
+}
+
+.grid-parent {
+  display: grid;
+  grid-template-columns: auto;
+  justify-content: center;
+  background-color: #cc2d2d;
+  width: auto;
+  height: auto;
+  padding: 10px;
+  text-align: center;
+}
+
+.grid-child1 {
+  background-color: rgb(92, 110, 110);
+  padding: 20px;
+}
+
+.grid-child2 {
+  background-color: rgb(92, 110, 110);
+  padding: 20px;
+}
+
+@media screen and (min-width: 668px) and(max-width:1024px) {
+  .grid-parent {
+    display: grid;
+    grid-template-columns: repeat(2 1fr);
+    justify-content: space-between;
+  }
+
+}
+
+h2 {
+  color: rgb(2, 28, 51);
+  text-align: center;
+}
+
+h3 {
+  color: rgb(248, 27, 27);
+  text-align: center;
+  background-color: #3b443d5e;
+  padding: 5px;
+
+}
+
+img {
+  border-radius: 10px;
+
+}
+
+img:hover {
+  transform: scaleX(-1);
+}
+
+
+.flex-parent {
+  background-color: #3b443d5e;
+  padding: 10px;
+  width: 100%;
+  color: black;
+  text-align: justify;
+  margin: auto;
+  align-items: normal;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+
+.flex-child {
+  background-color: #3b443d5e;
+  padding: 5px;
+  width: 100%;
+  color: black;
+  text-align: justify;
+}
+
+@media screen and (min-width: 668px) and(max-width:1024px) {
+  .flex-parent {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .flex-child {
+    flex: 50%;
+    padding: 5px;
+  }
 }
