--- a/code/style.css
+++ b/code/style.css
@@ -165,12 +165,56 @@ ul {
   line-height: 1.5;
 }
 
-/* .big-news img {
-  height: 400px;
-  width: 600px;
-  object-fit: cover;
-  transition: 0.5s all ease-in-out;
-} */
+.latest-news {
+  grid-column: 1 span;
+  grid-row: 1span;
+  background-color: lightseagreen;
+}
+
+.latest-container {
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.latest-header {
+  font-size: 1.8rem;
+  color: burlywood;
+}
+
+.latest-news__articles {
+  display: flex;
+  flex-direction: column;
+  margin-top: 1.5rem;
+  gap: 2rem;
+}
+
+.latest-article {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.latest-article::after {
+  content: "";
+  margin-top: 2rem;
+  display: flex;
+  width: 100%;
+  height: 1px;
+  background-color: pink;
+}
+
+.latest-article:last-child::after {
+  display: none;
+}
+
+.latest-article__title {
+  color: beige;
+}
+
+.latest-article__content {
+  color: beige;
+}
 
 .zoom-img {
   overflow: hidden;
@@ -184,9 +228,6 @@ ul {
   object-fit: cover;
   transition: 0.5s all ease-in-out;
 }
-/* .big-news img:hover {
-  transform: scale(1.2);
-} */
 
 .zoom-img img:hover {
   transform: scale(1.2);
@@ -200,13 +241,6 @@ ul {
   border: 1px solid yellowgreen;
   overflow: hidden;
 }
-
-/* .small-news__article {
-  height: 200px;
-  width: 200px;
-  margin: 20px;
-  border: 1px solid red;
-} */
 
 .small-news a {
   text-decoration: none;
