--- a/code/style.css
+++ b/code/style.css
@@ -1,9 +1,11 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
+  width: 100%;
   min-height: 100vh;
   display: flex;
   align-items: center;
@@ -19,18 +21,19 @@ body {
   width: auto;
 }
 
-nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 1.5rem 0;
-}
-
 ul {
   list-style-type: none;
 }
 
 /* Upper navbar */
+.upper-nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.5rem 0;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  border: 4px solid red;
+}
 .top-nav-links {
   display: flex;
   align-items: center;
@@ -53,31 +56,32 @@ ul {
 /* Lower navbar */
 .site-nav {
   display: flex;
-  justify-content: center;
-  background-color: turquoise;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.5rem 0;
+  background-color: lightseagreen;
+  padding: 1.5rem 0;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .nav-menu {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
-  padding: 1rem 0;
+  gap: 1rem 2rem;
+  width: 100%;
 }
 
 .nav-menu-items {
-  margin: 0 1rem;
-  display: flex;
-  align-items: center;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 400;
   color: white;
-  text-decoration: none;
-  overflow: hidden;
+  display: flex;
+  align-items: center;
 }
 
-.nav-menu-items a:hover {
+.nav-menu-items:hover {
   cursor: pointer;
   color: black;
 }
@@ -88,39 +92,35 @@ ul {
   margin-right: 1rem;
 }
 
-.site-nav input[type="text"] {
+.search-box {
+  position: relative;
+  display: flex;
+  align-items: center;
+  margin-right: 4rem;
+}
+.search {
   border: none;
+  height: 30px;
   padding: 5px 10px;
   font-size: 12px;
-  height: 30%;
   border-radius: 3px 0 0 3px;
-  width: 65%;
+  outline: none;
 }
 
-.search-box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-right: 20px;
-}
-.search-box button {
-  background: turquoise;
+.search-button {
+  background: lightseagreen;
   color: white;
   font-size: 12px;
   border: 1px solid white;
   border-radius: 0 3px 3px 0;
   cursor: pointer;
-  padding: 4px 10px;
+  padding: 3px 10px;
+  height: 30px;
 }
 
-.search-box button:hover {
+.search-button:hover {
   color: black;
 }
-
-/* .big-news {
-  margin: 50px 100px 30px 100px;
-  display: flex;
-} */
 
 .page-container {
   display: grid;
@@ -140,24 +140,20 @@ ul {
   display: flex;
   justify-content: space-between;
   margin-top: 1rem;
-  border: 1px solid red;
-}
-.big-news a {
-  text-decoration: none;
-  color: black;
-  display: flex;
 }
 
 .big-news__text-title {
   font-size: 2.5rem;
   width: 300px;
   text-transform: capitalize;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .big-news__text-bread {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .big-news-bread {
@@ -179,7 +175,17 @@ ul {
 
 .latest-header {
   font-size: 1.8rem;
-  color: burlywood;
+  color: beige;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.latest-header::after {
+  content: "";
+  margin-top: 1rem;
+  display: flex;
+  width: 50%;
+  height: 1px;
+  background-color: beige;
 }
 
 .latest-news__articles {
@@ -193,15 +199,16 @@ ul {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .latest-article::after {
   content: "";
   margin-top: 2rem;
   display: flex;
-  width: 100%;
+  width: 50%;
   height: 1px;
-  background-color: pink;
+  background-color: beige;
 }
 
 .latest-article:last-child::after {
@@ -210,16 +217,18 @@ ul {
 
 .latest-article__title {
   color: beige;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .latest-article__content {
   color: beige;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .zoom-img {
   overflow: hidden;
   max-width: 800px;
-  height: auto;
+  height: 400px;
 }
 
 .zoom-img img {
@@ -231,20 +240,47 @@ ul {
 
 .zoom-img img:hover {
   transform: scale(1.2);
+  cursor: pointer;
 }
 
 .small-news {
-  display: grid;
-  padding: 10px;
-  grid-template-columns: auto auto auto auto;
-  gap: 25px 25px;
-  border: 1px solid yellowgreen;
-  overflow: hidden;
+  display: flex;
+  grid-column: 3 span;
+  grid-row: 1 span;
+  gap: 1rem;
+  justify-content: space-between;
+  font-size: 1rem;
+  font-weight: 500;
+  border: 1px solid purple;
+  margin-bottom: 2rem;
 }
 
-.small-news a {
-  text-decoration: none;
+.small-news__article {
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
+  width: 250px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
+
+.small-news__title {
+  margin-bottom: 0.5rem;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.small-news__category {
+  margin: 0.5rem 0;
+  color: grey;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+/* .small-news__text {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: 1rem;
+  height: 127px;
+} */
 
 .small-news__image img:hover {
   transform: scale(1.2);
@@ -252,7 +288,7 @@ ul {
 
 .small-news__image {
   height: 250px;
-  width: 250px;
+  width: auto;
   overflow: hidden;
 }
 
@@ -265,11 +301,7 @@ ul {
 
 .small-news__image img:hover {
   transform: scale(1.2);
-}
-
-.small-news {
-  font-size: 1rem;
-  font-weight: 500;
+  cursor: pointer;
 }
 
 @media only screen and (max-width: 720px) {
