--- a/code/style.css
+++ b/code/style.css
@@ -30,17 +30,22 @@ ul {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1.5rem 0;
+  padding: 0.5rem 0.5rem 0 0.5rem;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  border: 4px solid red;
+  background-color: lightseagreen;
+  color: white;
 }
+
+.title-logo {
+  display: flex;
+  align-items: center;
+  gap: 0 1rem;
+}
+
 .top-nav-links {
   display: flex;
   align-items: center;
   gap: 1.5rem;
-}
-
-.top-nav-links li {
   cursor: pointer;
 }
 
@@ -58,9 +63,8 @@ ul {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1.5rem 0;
-  background-color: lightseagreen;
-  padding: 1.5rem 0;
+  padding: 0.5rem 0;
+  background-color: black;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -88,7 +92,7 @@ ul {
 
 .trending {
   font-weight: 700;
-  color: black;
+  color: lightseagreen;
   margin-right: 1rem;
 }
 
@@ -251,7 +255,6 @@ ul {
   justify-content: space-between;
   font-size: 1rem;
   font-weight: 500;
-  border: 1px solid purple;
   margin-bottom: 2rem;
 }
 
@@ -266,12 +269,14 @@ ul {
 .small-news__title {
   margin-bottom: 0.5rem;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  cursor: pointer;
 }
 
 .small-news__category {
   margin: 0.5rem 0;
   color: grey;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  cursor: pointer;
 }
 
 /* .small-news__text {
