--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,66 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  
+}
+
+h1 {
+  color: black;
+}
+
+@media (min-width: 668px) {
+  h1 {
+      color:rgb(51, 51, 169)
+  }
+}
+
+body {
+  background-color: antiquewhite;
+}
+
+.box-one {
+  color: navy;
+  background-color: aquamarine;
+  margin: 10px 5px 20px 5px;
+  padding: 25px;
+}
+
+.box-two {
+  color: orange;
+  background-color: bisque;
+  margin: 10px 5px 20px 5px;
+  padding: 25px;
+  border: 3px dotted green;
+
+}
+
+.flex-parent {
+  border: 2px dotted maroon;
+  height: 500px;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+
+}
+
+.flex-child {
+  margin: 5px;
+  width: 10%;
+  height: 50px;
+  
+
+}
+
+.yellow {
+  background: yellow;
+}
+
+.green {
+  background: green;
+}
+
+.blue {
+  background: blue;
+}
+
+.brown {
+  background: brown;
 }
