--- a/code/style.css
+++ b/code/style.css
@@ -1,10 +1,13 @@
+* {
+  padding: 0;
+  border: 0;
+  box-sizing: border-box;
+}
+
 body {
-  background: #b1c0b5;
-  display: flex;
+  background-image: linear-gradient(rgb(255, 100, 100), rgb(249, 252, 65));
   width: 100%;
   height: 100%;
-  justify-content: center;
-  flex-direction: column;
 }
 
 @media (min-width: 667px) and(max-width:1024px) {
@@ -24,7 +27,9 @@ header {
   border-bottom: solid;
   border-color: #e64242;
   padding: 2px;
-  text-align: left;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 
@@ -39,23 +44,22 @@ h1 {
 
 .grid-parent {
   display: grid;
-  grid-template-columns: auto;
   justify-content: center;
   background-color: #cc2d2d;
-  width: auto;
+  width: 60%;
   height: auto;
-  padding: 10px;
+  padding: 2px;
   text-align: center;
 }
 
 .grid-child1 {
-  background-color: rgb(92, 110, 110);
+  background-color: rgba(245, 169, 28, 0.219);
   padding: 20px;
 }
 
 .grid-child2 {
-  background-color: rgb(92, 110, 110);
-  padding: 20px;
+  background-color: rgba(245, 169, 28, 0.219);
+  padding: 2px;
 }
 
 @media screen and (min-width: 668px) and(max-width:1024px) {
@@ -68,21 +72,19 @@ h1 {
 }
 
 h2 {
-  color: rgb(2, 28, 51);
   text-align: center;
 }
 
 h3 {
-  color: rgb(248, 27, 27);
+  color: rgb(189, 20, 20);
   text-align: center;
   background-color: #3b443d5e;
-  padding: 5px;
+  padding: 10px;
 
 }
 
 img {
-  border-radius: 10px;
-
+  border-radius: 10px 10px 0 0;
 }
 
 img:hover {
@@ -91,35 +93,40 @@ img:hover {
 
 
 .flex-parent {
-  background-color: #3b443d5e;
-  padding: 10px;
-  width: 100%;
-  color: black;
-  text-align: justify;
-  margin: auto;
-  align-items: normal;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 2em;
+  padding: 2em;
+  margin: 10px;
 }
 
 
 .flex-child {
+  border-radius: 10px 10px 0 0;
   background-color: #3b443d5e;
-  padding: 5px;
   width: 100%;
   color: black;
   text-align: justify;
 }
 
-@media screen and (min-width: 668px) and(max-width:1024px) {
-  .flex-parent {
-    display: flex;
-    flex-wrap: wrap;
-  }
+.flex-child img {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+}
 
-  .flex-child {
-    flex: 50%;
-    padding: 5px;
+.flex-child .flex-child-content {
+  padding: 1em;
+}
+
+@media screen and (min-width: 768px) {
+  .flex-parent {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .flex-parent {
+    grid-template-columns: repeat(4, 1fr);
   }
 }
