--- a/code/style.css
+++ b/code/style.css
@@ -19,7 +19,7 @@ body {
   display: grid;
   font-family: "Georgia";
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(7, 150px);
+  grid-template-rows: repeat(10, 150px);
 }
 
 .logo {
@@ -44,6 +44,7 @@ nav {
   justify-content: flex-end;
   align-items: center;
   margin: 10px;
+  flex-wrap: wrap;
 }
 
 .nav-button {
@@ -69,6 +70,11 @@ nav {
   text-align: right;
 }
 
+.main-news {
+  text-align: justify;
+  margin: 10px;
+}
+
 .news-grid {
   display: flex;
   grid-column: 1 / span 2;
@@ -88,11 +94,13 @@ nav {
   height: 200px;
 }
 
-.main-news-title {
+.section-title {
   color: rgb(155, 153, 153);
   font-family: "Georgia";
   font-size: 30px;
   margin-bottom: 0px;
+  margin-right: 10px;
+  text-align: right;
 }
 
 .nav-button:hover {
@@ -106,11 +114,74 @@ h4 {
   color: white;
   text-decoration: none;
   margin-top: 0px;
+  margin-right: 10px;
   justify-content: flex-end;
 }
 
 #contact-form {
   display: flex;
   flex-direction: column;
+  font-size: 20px;
+  align-items: flex-end;
+}
+
+input {
+  background-color: rgb(221, 214, 214);
+  margin: 20px;
+  width: 300px;
+  height: 25px;
+  align-items: flex-end;
+  font-family: Georgia;
+}
+
+#feedback {
+  width: 300px;
+  height: 100px;
+}
+
+
+.about {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  padding: 10px;
+  grid-column: 3 / span 2;
+  grid-row: 3 / span 7;
+  margin-right: 10px;
+  border: solid rgba(167, 170, 179, 0.3);
+  border-radius: 5px;
   text-align: left;
+}
+
+p img {
+  float: right;
+  width: 200px;
+  margin-right: 10px;
+  margin-left: 20px;
+}
+
+ul {
+  text-align: justify;
+}
+
+.page-description {
+  text-align: right;
+  margin-right: 10px;
+}
+
+h5 {
+  color:rgb(155, 153, 153);
+  font-size: 20px;
+  text-align: center;
+}
+
+ul img {
+  float: left;
+  width: 200px;
+  margin-left: 0px;
+  margin-right: 25px;
+}
+
+li {
+  margin-top: 5px;
 }
