--- a/code/style.css
+++ b/code/style.css
@@ -61,7 +61,7 @@ header {
     font-size: 150%;
   }
 
-  .circle-logo {
+  .logo-wrapper img {
     width: 10%;
     margin-right: 5px;
   }
@@ -111,9 +111,12 @@ font-weight:bold;
 }
 
 .nav-list a {
-  text-decoration: none;
   color: white;
   font-family:Arial, Helvetica, sans-serif;
+}
+
+a { 
+  text-decoration: none;
 }
 
 .big-news {
