--- a/code/style.css
+++ b/code/style.css
@@ -1,13 +1,12 @@
 :root{
   --firstly-color: #d94ffc;
-  --secondly-color:#fffcf3;
+  --secondly-color:#fff;
   --tiredly-color:#1a1717;
   --fourthly-color:#fcf3ff;
   --heading-font-family: "Playfair Display", serif;
   --default-font-family: "Poppins", sans-serif;
 }
 *, *:before, *:after {
-  padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
@@ -17,15 +16,28 @@ body {
   color:var(--tiredly-color);
   font-family: var(--default-font-family);
 }
+main {
+  padding: 0 0.5rem;
+}
 
 a {
   color: var(--tiredly-color);
+  text-decoration: none;
 }
 
 h3, h1{
   font-family: var(--heading-font-family);
 }
-/*------------------------------------------------------Style for  nav bar---------------------------------------------*/
+h3{
+  border-bottom: 0.25rem solid var(--firstly-color);
+  color: var(--tiredly-color);
+  font-size:1rem;
+  display: inline;
+  letter-spacing: 0.1em;
+  z-index: 2;
+  margin-top: 1rem;
+}
+/*----Style for  nav bar-----*/
 .navbar-links {
   display: none;
   font-size: 2rem;
@@ -104,18 +116,139 @@ h3, h1{
 }
 .logo-nav {
   width: 4.2rem;
+  object-fit: cover;
   margin-left: 1.5rem;
   margin-right: 0.3rem;
 }
-   /*------------------------------------------------------Style for big new---------------------------------------------*/
- 
-  /*------------------------------------------------------Style for oder news---------------------------------------------*/
+   /*-----Style for big new----*/
+   .big-news{
+    margin: 1rem 0;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-column-gap: 1.5rem;
+    padding: 1rem 1rem;
+    background-color: var(--fourthly-color);
+   }
 
-  /*------------------------------------------------------Style for footer---------------------------------------------*/
+   .highlights-dish {
+    max-width: 100%;
+    object-fit: cover;
+  }
+
+  .highlights-dish:hover {
+    transform: scale(1.1);
+  }
+
+  /*-----Style for oder news-----*/
+/* animation  */
+h4{
+  border-bottom: 0.25rem solid var(--firstly-color);
+  color: var(--tiredly-color);
+  display: inline;
+  letter-spacing: 0.1em;
+  z-index: 2;
+
+}
+.animation-header {
+  overflow: hidden;
+  white-space: nowrap;
+  font-size: 1rem;
+  text-align: center;
+  width: 100%;
+}
 
 
-/* Media Query  for desktop */
+@keyframes ticker {
+  0% {
+    transform: translateX(calc(-100% - 35vw)) ;
+  }
+  100% {
+    transform: translateX(calc(100% + 35vw));
+  }
+}
+
+
+.animation-header h4 {
+  display: inline-block;
+  animation: ticker 15s linear infinite;
+}
+
+
+.other-news{
+  display: grid;
+  grid-template-columns:  1fr;
+  text-align: center;
+  grid-gap: 3rem;
+  margin: 1rem;
+  
+}
+.other-news .random-news img{
+  object-fit: cover;
+  width: 100%;
+  height: 30rem;
+  box-shadow: 0rem 0.15rem 0.3rem rgba(0, 0, 0, 0.5);
+  
+}
+.other-news .random-news img:hover {
+  transform: scale(1.1); 
+}
+
+
+.other-news a {
+  text-decoration: none;
+}
+.other-paragraph{
+  font-size: 1rem;
+  text-align: center;
+  padding: 2rem;
+}
+.other-paragraph:hover{
+  color: var(--firstly-color);
+  border-bottom: 0.25rem solid var(--firstly-color);
+  display: inline;
+  letter-spacing: 0.1em;
+  z-index: 2;
+  
+}
+
+.random-news{
+  padding: 1rem;
+  background-color: var(--fourthly-color);
+}
+
+  /*------Style for footer-----*/
+  .copyright{
+    background-color: var(--firstly-color);
+    color: var(--secondly-color);
+    padding: 3.125rem;
+    text-align: center;
+    }
+    .copyright p{
+      font-size: 1rem;
+      color:  var(--secondly-color);
+    }
+    .technigo{
+    width: 3rem;
+    }
+    .social-links{
+      display: flex;
+      justify-content: center;
+    }
+    footer .social-links a{
+      margin: 0 1.25rem;
+      border:0.063rem solid var(--branding-color);
+      padding: 0.4rem 0.4rem;
+      font-size: 3rem;
+      color:  var(--fourthly-color);
+      transition: all 100ms ease-in-out;
+    }
+
+/* ------------------------------------------------------Media Query  for desktop ------------------------------------------------------*/
 @media (min-width: 1025px) {
+
+  main {
+    padding: 0 6rem;
+  }
   h1{
     text-align: center;
     padding: 3rem;
@@ -127,19 +260,18 @@ h3, h1{
   font-size: 2.5em;
   display: inline;
   letter-spacing: 0.1em;
-  text-transform: uppercase;
   z-index: 2;
   }
-/*------------------------------------------------------Style for  nav bar---------------------------------------------*/
+/*-----Style for  nav bar-----*/
 
   .navbar-links {
     list-style: none;
     display: flex;
     margin: 0;
     padding: 0;
-    
+
   }
-  
+
   .navbar-links li {
     margin-left: 1.25rem;
     border-bottom: 0.25rem solid var(--fourthly-color);
@@ -158,14 +290,14 @@ h3, h1{
   letter-spacing: 0.1em;
   z-index: 2;
   opacity: 0.7;
-  
+
   }
-  
+
   .navbar-links a {
     color:var(--secondly-color);
     text-decoration: none;
   }
-  
+
   .nav-toggle {
     display: none;
   }
@@ -176,23 +308,25 @@ h3, h1{
 #nav-toggle:not(:checked) ~ .navbar-links {
   display: flex;
 }
-  /*------------------------------------------------------Style for big new---------------------------------------------*/
+  /*-----Style for big new-----*/
+  .big-news {
+    grid-template-columns: 3fr 3fr;
+    background-color: var(--fourthly-color);
+    align-items: center;
+    margin: 1rem 0;
+    display: grid;
+    grid-column-gap: 1rem;
+    background-color: var(--fourthly-color);
+  }
+
   .highlights-news {
     text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
+
   }
-  
-  .highlights-dish {
-    max-width: 100%;
-    object-fit: cover;
-  }
-  
-  .highlights-dish:hover {
-    transform: scale(1.1); 
-  }
-  
+
   .highlights-paragraph {
     padding-left: 2rem;
     padding-top: 5rem;
@@ -200,43 +334,22 @@ h3, h1{
     line-height: 1.5;
     font-size: 2rem;
   }
-  
+
   .highlights-news a {
     text-decoration: none;
   }
-  
-  .big-news {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 5rem;
-    margin: 1rem;
-    background-color: var(--fourthly-color);
-  }
-  
-  .highlights-name {
-    width: 28ch;
-    animation: typing 3s steps(30), blink .5s step-end infinite alternate;
-    white-space: nowrap;
-    overflow: hidden;
-    font-family: monospace;
+
+
+
+   .highlights-name {
+
     font-size: 4rem;
     display: inline-block;
   }
-  
-  @keyframes typing {
-    from {
-      width: 0;
-    }
-  }
-  
-  @keyframes blink {
-    50% {
-      border-color: transparent;
-    }
-  }
-  
- 
-/*------------------------------------------------------Style for oder news---------------------------------------------*/
+
+
+
+/*-------Style for oder news-------*/
 
 
 /* animation  */
@@ -252,7 +365,7 @@ h4{
   overflow: hidden;
   white-space: nowrap;
   font-size: 3em;
-  text-align: center; 
+  text-align: center;
   width: 100%;
 }
 
@@ -275,43 +388,42 @@ h4{
 
   .other-news{
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(12, 1fr);
     text-align: center;
     grid-gap: 3rem;
     margin: 1rem;
-    
+
   }
-  .other-news img{
+  /* .other-news .random-news img{
     object-fit: cover;
     width: 100%;
     height: 30rem;
     box-shadow: 0rem 0.15rem 0.3rem rgba(0, 0, 0, 0.5);
-    
+
   }
-  .other-news img:hover {
-    transform: scale(1.1); 
+  .other-news .random-news img:hover {
+    transform: scale(1.1);
   }
+
+
+  .other-news a {
+    text-decoration: none;
+  } */
+  .other-paragraph{
+    font-size: 3rem;
+    /* text-align: center;
+    padding: 2rem; */
+  }
+  
 
   .random-news{
     padding: 1rem;
+    grid-column: span 3;
     background-color: var(--fourthly-color);
   }
-  .random-news a {
-    text-decoration: none;
-  }
-  .other-paragraph{
-    font-size: 3rem;
-    text-align: center;
-    padding: 2rem;
-  }
-  .other-paragraph:hover{
-    color: var(--firstly-color);
-    border-bottom: 0.25rem solid var(--firstly-color);
-    display: inline;
-    
-  }
 
-  /*------------------------------------------------------Style for footer---------------------------------------------*/
+
+  /*------Style for footer-------*/
   .copyright{
   background-color: var(--firstly-color);
   color: var(--secondly-color);
@@ -330,19 +442,22 @@ h4{
     justify-content: center;
   }
   footer .social-links a{
-    margin: 0 20px;
-    border: 1px solid var(--branding-color);
-    padding: 10px 14px;
+    margin: 0 1.25rem;
+    border: 0.063rem solid var(--branding-color);
+    padding: 0.625rem 0.875rem;
     font-size: 4rem;
     color:  var(--fourthly-color);
     transition: all 100ms ease-in-out;
   }
-  
+
 }
 
-/* Media Query for (Tablet) */
+/* ------------------------------------------------------Media Query for (Tablet)------------------------------------------------------ */
+
+
 @media (min-width: 667px) and (max-width: 1024px) {
- /*------------------------------------------------------Style for  nav bar---------------------------------------------*/
+ /*----Style for  nav bar-----*/
+
   .navbar-links {
       display: none;
   }
@@ -375,15 +490,21 @@ h4{
       padding: 0.625rem;
       width: 100%;
   }
-    /*------------------------------------------------------Style for big new---------------------------------------------*/
+    /*------Style for big new-----*/
   .big-news{
-    display: grid;
+    
     grid-template-columns: 1fr 1fr;
-    padding: 5rem;
-  }
-  /*------------------------------------------------------Style for oder news---------------------------------------------*/
 
-  /*------------------------------------------------------Style for footer---------------------------------------------*/
+  }
+  /*-----Style for oder news-----*/
+  .other-news{
+  
+    grid-template-columns: 1fr 1fr;
+ 
+  
+
+  }
+  /*-----Style for footer------*/
 }
 
 
