--- a/code/style.css
+++ b/code/style.css
@@ -57,13 +57,14 @@ header {
 
   .logo-wrapper h1 {
     color: white;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 150%;
   }
 
   .logo-wrapper img {
     width: 10%;
     margin-right: 5px;
+    padding-bottom: 2px;
   }
   
 .nav-wrapper {
@@ -86,6 +87,7 @@ ul {
 }
 
 .triple-bars {
+  margin-right: 20px;
   width: 30%;
   max-height: 50%;
   object-fit: contain;
@@ -112,45 +114,42 @@ font-weight:bold;
 
 .nav-list a {
   color: white;
-  font-family:Arial, Helvetica, sans-serif;
+  font-family: Montserrat, sans-serif;
 }
 
 a { 
   text-decoration: none;
 }
 
-.big-news {
-  border: 1px solid black;
-  width: 90%;
-  margin: auto;
+
+/* News cards */
+
+main {
+  font-family: Montserrat, sans-serif;
+  margin: 16px;
   display: grid;
-  grid-template-columns: repeat(1fr);
-  gap: 5px;
+  grid-template-columns: 1fr;
+  grid-gap: 16px;
+  justify-content: center;
+}
+
+.card {
+  overflow: hidden; 
+  display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
-.news-cards {
-  border: 1px solid black;
-  width: 90%;
-  margin: auto;
-  display: grid;
-  grid-template-columns: repeat(1fr);
-  gap: 5px;
+.card-image {
+    height: 200px;
+    width: 100%;
+    object-fit: cover;
 }
 
-.news-card-one {
-  border: 1px solid black;
-}
-.news-card-two {
-  border: 1px solid black;
-}
-.news-card-three {
-  border: 1px solid black;
+.card-title {
+  padding: 16px;
 }
 
-.news-card-four {
-  border: 1px solid black;
-}
-.news-card-five {
-  border: 1px solid black;
+.card-description {
+  padding: 0 16px;
 }
