--- a/code/style.css
+++ b/code/style.css
@@ -24,50 +24,66 @@ body {
 
 /*Mobile viewport*/
 @media (max-width: 667px) {
-  .nav-list {display: none;}
+  .header-nav-list {display: none;}
 }
 
 /*Tablet viewport*/
 @media (min-width: 667px) and (max-width: 1024px) {
-  .triple-bars {display: none;}
+  .header-hamburger {display: none;}
+  .main {
+    grid-template-columns: 1fr 1fr;
+  }  
+  .first-news, .second-news {
+  grid-column: 1 / span 2;
+  }
 }
 
 /*Desktop viewport*/
 @media (min-width: 1025px) {
-  .triple-bars {display: none;}
+  .header-hamburger {display: none;}
+  .main {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  } 
+  .first-news {
+    grid-column: 1 / span 4;
+    }
+  .second-news {
+    grid-column: 1 /span 2;
+  }
 }
 
 header {
   background-color: #c2b3ff;
 }
 
-.site-header {
+.header-website {
   height: 70px;
   display: flex;
   justify-content: space-between;
   }
 
- .logo-wrapper {
-    height: 100%;
-    padding: 10px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-end;
-  }
+.header-logo-wrapper {
+  height: 100%;
+  padding-left: 16px;
+  padding-bottom: 10px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+}
 
-  .logo-wrapper h1 {
-    color: white;
-    font-family: Montserrat, sans-serif;
-    font-size: 150%;
-  }
+.header-logo-wrapper h1 {
+  color: white;
+  font-family: Montserrat, sans-serif;
+  font-size: 150%;
+}
 
-  .logo-wrapper img {
-    width: 10%;
-    margin-right: 5px;
-    padding-bottom: 2px;
-  }
+.header-logo-wrapper img {
+  width: 10%;
+  margin-right: 5px;
+  padding-bottom: 3px;
+}
   
-.nav-wrapper {
+.header-nav-wrapper {
   width: 50%;
   height: 100%;
   padding: 10px;
@@ -81,19 +97,19 @@ ul {
   list-style-type: none;
 }
 /*To make the list horizontal instead of vertical. <li> is a block element by default*/
-.nav-list li {
+.header-nav-list li {
   display: inline;
   margin-left: 10px;
 }
 
-.triple-bars {
-  margin-right: 20px;
+.header-hamburger {
   width: 30%;
+  padding-bottom: 5px;
   max-height: 50%;
   object-fit: contain;
 }
 
-.nav-link {
+.header-nav-link {
 padding: 5px;
 border: none;
 border-radius: 5px;
@@ -112,7 +128,7 @@ font-weight:bold;
   background: #99ccff;
 }
 
-.nav-list a {
+.header-nav-list a {
   color: white;
   font-family: Montserrat, sans-serif;
 }
@@ -120,7 +136,6 @@ font-weight:bold;
 a { 
   text-decoration: none;
 }
-
 
 /* News cards */
 
@@ -133,6 +148,10 @@ main {
   justify-content: center;
 }
 
+/* Big news section */
+
+
+/* Other news */
 .card {
   overflow: hidden; 
   display: flex;
@@ -151,5 +170,16 @@ main {
 }
 
 .card-description {
-  padding: 0 16px;
+  padding: 0 16px 48px;
+}
+
+.card-link {
+  color: #3b373b; 
+}
+
+footer {
+  font-family: Montserrat, sans-serif;
+  font-weight: bold;
+  font-size: 10px;
+  margin: 0 0 16px 10px;
 }
