--- a/code/style.css
+++ b/code/style.css
@@ -155,9 +155,7 @@ padding-bottom: 1rem;
 .highlights-dish:hover {
 transform: scale(1.1);
 }
-.highlights-name{
-padding-top: 1rem;
-}
+
 .highlights-paragraph{
   text-align: center;
   line-height: 1.5;
@@ -165,7 +163,32 @@ padding-top: 1rem;
 .highlights-news a {
   text-decoration: none;
   }
+  /* animation */
+  .highlights-name {
+    width: 28ch;
+    animation: typing 3s steps(30), blink .5s step-end infinite alternate;
+    white-space: nowrap;
+    overflow: hidden;
+    font-family: monospace;
+    font-size: 0,2rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    display: inline-block;
+  }
+  
+  @keyframes typing {
+    from {
+      width: 0;
+    }
+  }
+  
+  @keyframes blink {
+    50% {
+      border-color: transparent;
+    }
+  }
 /*-----Style for oder news-----*/
+
 /* animation */
 h4{
 border-bottom: 0.25rem solid var(--firstly-color);
@@ -331,14 +354,14 @@ grid-column-gap: 1rem;
 
 
 .highlights-paragraph {
-  padding-top: 3rem;
+  padding-top: 1.5rem;
 }
 
 .highlights-name {
-font-size: 3rem;
-display: inline-block;
-padding-top: 1rem;
+  font-size: 2rem;
+ padding-top: 1rem;
 }
+
 
 /*-------Style for oder news-------*/
 
