--- a/code/style.css
+++ b/code/style.css
@@ -50,6 +50,7 @@ nav a:hover {
   align-items: center;
   justify-content: space-around;
   flex-direction: row;
+  box-sizing: border-box;
   width: 100%;
   margin: 0px 10px;
 
