--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,9 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  background: #b6a699;
+  color: #0e0402;
+}
+
+h1 {
+  color: #0e0402;
+  font-size: 40px;
 }
