--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,72 @@
 html {
   background: #FFFAFA;
-  color: #2F4F4F;
+  color: black
 }
+
+header {
+  background-color: #e646c8;
+}
+
+.big-news {
+  font-size: 25px;
+}
+
+.daily-news {
+  font-size: 25px;
+}
+
+.first-section-box {
+  padding: 20px;
+  background-color: rgb(193, 255, 192);
+}
+
+.flex-parent {
+  border: 2px solid purple;
+  height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.flex-child {
+  margin: 10px;
+  width: 250px;
+  height: 250px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.red {
+  background: red;
+}
+
+.blue {
+  background: blue;
+}
+
+img {
+  width: 100px;
+  height: 80px;
+}
+
+button {
+  height: 52px;
+  display: block;
+  padding: 10px 20px;
+  border: 1px solid;
+  background: snow;
+  color: hotpink;
+  font-family: fantasy;
+  font-size: 10px;
+}
+
+.grid-item {
+  background: pink;
+}
+
+
+@media (min-width: 668px) and (max-width: 1024px) {}
+
+@media (min-width: 1024px) {}
