--- a/code/style.css
+++ b/code/style.css
@@ -7,3 +7,24 @@ h1 {
   color: #0e0402;
   font-size: 40px;
 }
+
+.grid-parent {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(5, 100px);
+  gap: 30px;
+}
+
+.grid-item {
+  background: white;
+
+}
+
+.big-grid-item {
+  background-color: #0e0402;
+  grid-column: span 4;
+}
+
+.lonely-grid-item {
+  grid-column: span 4
+}
