--- a/code/style.css
+++ b/code/style.css
@@ -3,7 +3,7 @@
 } /*för att kunna skriva siffror som procent för större/mindre skärmar*/ 
 
 body, html {
-  background-color: black;
+  background-color: white;
   height:100%;
   width:100%;
 
@@ -11,7 +11,9 @@ body, html {
 
 a {
   text-decoration: none;
+  color: black;
 }
+
 
 .navigation-bar {
   list-style-type: none;
@@ -20,20 +22,17 @@ a {
 }
 
 .main-header {
-  /* felstavad, -streck för att kopplas till headern */
-
   padding: 10px;
-  border-radius: 15px;
-  border: solid rgb(252, 221, 252);
+  border-radius: 10px;
+  border: solid black;
   display: flex;
-  /*DET HÄR E VIKTIGT, HÖR ÄR FLEXBOXEN DE PRATAR OM*/
 
 }
 
 .main-header a {
-  color: white;
+  color: black;
   padding: 10px;
-  border: solid rgb(252, 221, 252);
+  border: solid black;
   height: 40px;
   border-radius: 15px;
 }
@@ -41,7 +40,7 @@ a {
 
 
 img {
-  border: solid rgb(252, 221, 252);
+  border: solid black;
   border-radius: 15px;
 
 }
@@ -54,7 +53,7 @@ img {
 img:hover {
   opacity: 50%;
   border-radius: 25px;
-  border-color: white;
+  border-color: black;
 }
 
 .header-bild {
@@ -63,35 +62,34 @@ img:hover {
 }
 
 .header-rubrik {
-  color: rgb(252, 221, 252);
+  color: black;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   padding: 0px 20px 20px 10px;
   margin: 0px 20px 20px 10px;
-    /*skapar marginal ovanför/höger/under/vänster. måste vara lika mycket för alla saker som ska ligga bredvid varandra*/
 
 }
 
 .stora-nyheten {
-  background: black;
+  background: white;
   height: 65%;
   padding: 20px;
   display: flex;
-  border: solid rgb(252, 221, 252);
+  border: solid black;
   border-radius: 15px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin: 10px;
 
 }
 
 .stora-nyheten :hover {
   opacity: 30%;
   border-radius: 25px;
-  border-color: white;
+  border-color: black;
 }
 
 .stora-nyheten-img {
   width: 30%;
   height: 80%;
+  float:left
 }
 
 .stora-nyheten-headline {
@@ -125,19 +123,18 @@ img:hover {
 
 
 .grid-item {
-  background: lightgrey;
+  background: white;
   flex:25%;
   border-radius: 40px;
-  padding: 10px;
-}
-
-.other-news2 {
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  border: solid lightgrey;
+  padding: 5px 10px;
 }
 
 
-.other @media (min-width: 668px) {
-  h1 {
-    color: rgb(51, 51, 169)
+@media (min-width:667px) and (max-width:1024px) {
+  body {
+    flex-direction: row;
+    flex-wrap: wrap;
+    background-color: orange;
   }
-
+}
